--- a/spring-boot-cloud-template-web/pom.xml
+++ b/spring-boot-cloud-template-web/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>top.mwoffice</groupId>
             <artifactId>spring-boot-cloud-template-service</artifactId>
             <version>${project.version}</version>
